Added goniometeraxis to user guide

--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -522,6 +522,16 @@ The command \Keyword{SOLVENTHEAVYCONC Na 1000 Cl 1000} specifies 1M sodium chlor
 
 Note if \Keyword{OILBASED} is set to \Keyword{\textit{TRUE}}, all elements in the surrounding must be specified.
 
+\subsection{\Keyword{GONIOMETERAXIS}}
+\label{goniometeraxis}
+
+\noindent \Keyword{GONIOMETERAXIS \textit{I}}
+specifies the orientation of the goniometer. Currently only 0 and 90 are accepted values, with 0 corresponding to a horizontal
+goniometer (parallel to the floor) and 90 a vertical goniometer (perpendicular to the floor).
+
+The default value for \textit{I} is 0 (horizontal).
+
+
 \label{RDv3End}
 
 
