Made ciruclar colliamtion clearer in user guide

--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -605,6 +605,7 @@ For an uncollimated Gaussian beam, set to $\approx 3 \times$ FWHM. \SB
 \noindent \Keyword{COLLIMATION CIRCULAR \textit{X Y}}
 
 specifies the horizontal and vertical collimation of a circular or elliptical beam.
+X and Y are the diameter of the circle/ellipse in the X and Y dimension
 Delimits where the beam has non-zero intensity.
 This is defined by the slits.
 
