Made flux clearer in user guide

--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -586,7 +586,7 @@ Currently three distinct beam implementations exist:\SB
 \subsection{\Keyword{FLUX}}
 \label{flux}
 
-\noindent \Keyword{FLUX \textit{F}} specifies the total beam flux in photons per second. The flux parameter \textit{F} can be specified in scientific notation (e.g. \Keyword{1.3e12}).
+\noindent \Keyword{FLUX \textit{F}} specifies the total beam flux in photons per second. The flux parameter \textit{F} can be specified in scientific notation (e.g. \Keyword{1.3e12}). Note: The flux that should be specified is the flux incident on the crystal after collimation.
 
 
 \subsection{\Keyword{FWHM}}
