Updated user guide

--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -537,6 +537,15 @@ goniometer (parallel to the floor) and 90 a vertical goniometer (perpendicular t
 
 The default value for \textit{I} is 0 (horizontal).
 
+\subsection{\Keyword{POLARISATIONDIRECTION}}
+\label{polarisationdirection}
+
+\noindent \Keyword{POLARISATIONDIRECTION \textit{I}}
+specifies the direction of the beam polarisation vector. Currently only 0 and 90 are accepted values, with 0 corresponding to a horizontaly 
+polarised beam (parallel to the floor) and 90 a vertically polarised beam (perpendicular to the floor).
+
+The default value for \textit{I} is 0 (horizontally polarised).
+
 \subsection{\Keyword{DENSITYBASED}}
 \label{oilbased}
 
