Fixed typo in user guide

--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -81,7 +81,7 @@ If calculating doses for X-ray Free-Electron Lasers (\RX), please cite:\\[0.4em]
 \noindent
 If using microcrystals or microbeams, we recommend using the Monte Carlo simulations outlined in:\\[0.4em]
 \href{https://doi.org/10.1002/pro.3922}{\large\textbf{Doses for experiments with microbeams and microcrystals: Monte Carlo simulations in \RD}}\\[0.1em]
-\href{https://doi.org/10.1002/pro.3922}{ickerson J. L.\& Garman, E. F. (2020). \textit{Protein Science} \textbf{30} %, ??--??
+\href{https://doi.org/10.1002/pro.3922}{Dickerson J. L.\& Garman, E. F. (2020). \textit{Protein Science} \textbf{30} %, ??--??
 }\\[0.1em]
 \href{https://doi.org/10.1002/pro.3922}{doi.org/10.1002/pro.3922}
 \\[1.5em]
